# falcon-database

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: ci.yml  linux.yml  main-pipeline.yml  windows.yml
.nuget-tools/: nuget
include/falcon-database/: DatabaseConnection.hpp  DeviceCharacteristic.hpp  SnapshotManager.hpp  export.h
ports/falcon-database/: portfile.cmake
src/: DatabaseConnection.cpp  DeviceCharacteristic.cpp  SnapshotManager.cpp
tests/: CMakeLists.txt
tests/integration/: test_cli.cpp
